完成 client 包的代码审查 - 完善 github action